# proxy-verifier

./: .clang-format  .gitignore  .pylintrc  .style.yapf  .yapfignore  CMakeLists.txt  CONTRIBUTING.md  Code-of-conduct.md  NOTICES  Pipfile  README.md  Sconstruct  microdnsconf.json  pyproject.toml
local/: CMakeLists.txt
local/include/core/: ArgParser.h  Localizer.h  ProxyVerifier.h  SocketNotifier.h  SocketPoller.h  YamlParser.h  case_insensitive_utils.h  http.h  http2.h  http3.h  https.h  proxy_protocol_util.h  verification.h  yaml_util.h
local/parts/: proxy-verifier.part
local/src/client/: CMakeLists.txt  verifier-client.cc  verifier-client.part
local/src/core/: ArgParser.cc  CMakeLists.txt  Localizer.cc  ProxyVerifier.cc  SessionFactory.cc  SocketNotifier.cc  SocketPoller.cc  YamlParser.cc  core.part  http.cc  http2.cc  http3.cc  https.cc  proxy_protocol_util.cc  verification.cc
local/src/server/: CMakeLists.txt  verifier-server.cc  verifier-server.part
test/autests/: Pipfile  autest.sh  pyproject.toml  test-env-check.sh
test/autests/gold_tests/arguments/format_argument/: format_argument.test.py  no_uuid.yaml  unique_by_host.yaml  unique_by_url.yaml  uuid1.yaml  uuid2.yaml
test/autests/gold_tests/arguments/keys_argument/: five_transactions.yaml  keys_arg.test.py
test/autests/gold_tests/arguments/port_argument/: no_port_argument.test.py  not_used.yaml
test/autests/gold_tests/arguments/repeat_argument/: repeat_argument.test.py
test/autests/gold_tests/arguments/version_argument/: version_argument.test.py
test/autests/gold_tests/autest-site/: client.test.ext  directive_engine.py  init.cli.ext  ports.py  proxy.test.ext  proxy_http1.py  proxy_http2.py  proxy_http3.py  proxy_protocol_context.py  replay_gen.test.ext  server.test.ext  setup.cli.ext  socket_util.py  test_proxy.py
test/autests/gold_tests/await/: await.replay.yaml  await.test.py
test/autests/gold_tests/body/: body.test.py  body.yaml
test/autests/gold_tests/body/gold/: body_client.gold  body_proxy.gold  body_server.gold
test/autests/gold_tests/body_verification/: body_verification.test.py  http.yaml  http2.yaml  http3.yaml
test/autests/gold_tests/delay/: client-side-delay.yaml  delay.test.py  delay.yaml  server-side-delay.yaml  verify_duration.py
test/autests/gold_tests/doctest/: doctest.test.py  example_replay.yaml  sample_replay.yaml  verify_example_replay_contents.py
test/autests/gold_tests/doctest/gold/: doctest_client.gold  doctest_server.gold
test/autests/gold_tests/field_parsing/: duplicate_fields.test.py  empty_field.test.py  empty_proxy.test.py  parse_yaml.test.py
test/autests/gold_tests/field_parsing/gold/: duplicate_fields_client.gold  duplicate_fields_client.gold_macos  duplicate_fields_proxy.gold  duplicate_fields_proxy.gold_macos  duplicate_fields_server.gold  empty_proxy_client.gold  (+18 more)
test/autests/gold_tests/field_verification/: field_verification.test.py  not_nocase.test.py  substr_rules.test.py
test/autests/gold_tests/format_argument/: format_argument.test.py
test/autests/gold_tests/http/: http.test.py
test/autests/gold_tests/http2/: http2.test.py
test/autests/gold_tests/http2_abort/: http2_abort.test.py
test/autests/gold_tests/http2_close_on_goaway/: http2_close_on_goaway.test.py  http2_close_on_goaway.yaml
test/autests/gold_tests/http2_frames/: http2_frames.test.py  http2_frames.yaml  http2_multi_data_frames.test.py  http2_multi_data_frames.yaml  verify_duration.py
test/autests/gold_tests/http2_strict_goaway/: http2_strict_goaway.test.py  http2_strict_goaway.yaml
test/autests/gold_tests/http3/: http3.test.py
test/autests/gold_tests/https/: https.test.py  mtls.test.py
test/autests/gold_tests/ipv6/: ipv6.test.py
test/autests/gold_tests/no_proxy/: h2.yaml  no_proxy.test.py  single_transaction.json
test/autests/gold_tests/proxy-protocol/: proxy_protocol.test.py
test/autests/gold_tests/replay_gen/: replay_gen.test.py
test/autests/gold_tests/status_verification/: status_verification.test.py
test/autests/gold_tests/strict_mode/: strict_mode.test.py
test/autests/gold_tests/url_verification/: url_verification.test.py  url_verification.yaml
(+203 files in other folders)
