# @file
#
# Copyright 2026, Verizon Media
# SPDX-License-Identifier: Apache-2.0
#

[project]
name = "proxy-verifier-autests"
version = "0.1.0"
description = "AuTest dependencies for Proxy Verifier"
requires-python = ">=3.10"

dependencies = [
  "aioquic==1.1.0",
  "asyncio",
  "autest",
  "eventlet",
  "h2",
  "pyOpenSSL",
  "ruamel_yaml",
  "wsproto",
]

[project.optional-dependencies]
dev = [
  "pyflakes",
]
